# limit-orderbook-matching-engine

./: .gitignore  CMakeLists.txt  README.md  performance.md
.github/: CODEOWNERS
data/: example1.csv  example2.csv  orders.csv  orders100k.csv  orders10k.csv  orders1k.csv  simulate_orders.py
limit-orderbook/: LimitOrder.cpp  LimitOrder.h  Makefile  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  main.cpp
src/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  Exchange.cpp  Exchange.h  ID.cpp  ID.h  LimitOrder.cpp  LimitOrder.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  main.cpp
src/main.out.dSYM/Contents/Resources/Relocations/aarch64/: main.out.yml
tests/: CMakeLists.txt  OrderBookTests.cpp
